# mod-collector

./: Knowledge_object_README.md  README.md  comparison_values.csv  comparison_values_1.csv  kgrid-metadata.json  metadata.json  mod_df.csv  pyproject.toml
.kgrid/: README.md
.kgrid/sample_client/: client.py  sample_output_mod_df.csv
Knowledge_object_inputs/: 1_performers_10_measures_test.csv  comparison_values_1.csv
Knowledge_object_output/: mod_df.csv
sample_client/: .kgridsample_client1_performers_10_measures_test.csv  calc_gaps_slopes.py
src/mod_collector/: calc_gaps_slopes.py  insert.py  load.py  mod_collector.py
tests/: 1_performers_10_measures.csv  1_performers_all_measures.csv  spek_mc.json  spek_tp.json  spek_tp_test.json
