[tool.poetry]
name = "mod-collector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
rdfpandas = "^1.1.5"
rdflib = "^6.1.1"
SPARQLWrapper = "^2.0.0"
scipy="^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
pycln = "^1.3.3"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# tooling running pytest will not resolve modules in `src`
testpaths = ["tests"]
pythonpath = ["src"]
